@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.61 2009-01-18 15:57:28 tcunha Exp $
+# $Id: GNUmakefile,v 1.62 2009-01-18 17:20:52 nicm Exp $
 
 .PHONY: clean
 
@@ -36,11 +36,11 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-save-buffer.c cmd-select-pane.c cmd-split-window.c \
       cmd-resize-pane-up.c cmd-resize-pane-down.c cmd-kill-pane.c \
       cmd-up-pane.c cmd-down-pane.c cmd-choose-window.c cmd-choose-session.c \
-      cmd-suspend-client.c \
+      cmd-suspend-client.c cmd-find-window.c \
       window-clock.c window-scroll.c window-more.c window-copy.c \
       window-choose.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
-      tty.c tty-term.c tty-keys.c tty-write.c
+      tty.c tty-term.c tty-keys.c tty-write.c util.c
 
 CC?= gcc
 INCDIRS+= -I. -I-
